opam-version: "2.0"
version: "2.3"
synopsis: "Fontset definition of satysfi-fonts-bodoni-star"
description: """
Fontset definition of satysfi-fonts-bodoni-star
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "ISC"
homepage: "https://github.com/na4zagin3/satysfi-fss"
dev-repo: "git+https://github.com/na4zagin3/satysfi-fss.git"
bug-reports: "https://github.com/na4zagin3/satysfi-fss/issues"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}

  "satysfi-fss" {>= "0.2.0" & < "0.3.0"}
  "satysfi-fonts-bodoni-star" {>= "2.3" & < "2.4"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "fss-fontset-bodoni-star"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fss-fontset-bodoni-star"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
