opam-version: "2.0"
#name: "satysfi-great-library"
version: "1.0"
synopsis: "Font selection scheme"
description: """
Brilliant description comes here.
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "LGPL-3.0-or-later" # Choose what you want
#homepage: "<product home page>"
#bug-reports: "<product issue tracker>"
#dev-repo: "<repo url>"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}

  "satysfi-fonts-junicode" {>= "1" & < "2"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fss"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
