opam-version: "2.0"
version: "0.0.1"
synopsis: "Font selection scheme"
description: """
Document: Font selection scheme for SATySFi
"""
maintainer: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
authors: "SAKAMOTO Noriaki <mrty.ityt.pt@gmail.com>"
license: "LGPL-3.0-or-later"
homepage: "https://github.com/na4zagin3/satysfi-fss"
dev-repo: "git+https://github.com/na4zagin3/satysfi-fss.git"
bug-reports: "https://github.com/na4zagin3/satysfi-fss/issues"
depends: [
  "satysfi" {>= "0.0.5" & < "0.0.6"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}

  "satysfi-base" {>= "1.3.0" & < "2"}
  "satysfi-fonts-junicode" {>= "1" & < "2"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "--name" "fss"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
